unpackaged/main/default/objects/WSParametreRequete__c/WSParametreRequete__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>WS Paramètres Requête</label>
</CustomObject>