unpackaged/main/default/objects/WSParametreRequete__c/fields/Methode__c.field-meta.xml
<CustomField>
    <fullName>Methode__c</fullName>
    <label>Méthode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>