unpackaged/main/default/objects/WSParametreRequete__c/fields/MotDePasse__c.field-meta.xml
<CustomField>
    <fullName>MotDePasse__c</fullName>
    <label>Mot de Passe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>